@@ -5,6 +5,9 @@ SimpleMail Open Source - ChangeLog
 2007-02-14  Bernd Gollesch <bgollesch@sime.at>
 	* amiga-mui/mailtreelistclass-new.c: Don't show autospam marked messages in bold.
 	  Added more muikeys for keyboard navigation.
+	* folder.c: Added reverse sorting for Filename and POP3 Server column.
+	  Only the FOLDER_TYPE_SEND does show the "To" address in the mailtree.
+	  Don't call the secondary compare function if it is the same as the primary.
 
 2007-02-13  Bernd Gollesch <bgollesch@sime.at>
 	* amiga-mui/mailtreelistclass-new.c: Added IDCMP_INTUITICKS to the mousemove
